bug in planet parameter computations

--- a/planet_properties.ipynb
+++ b/planet_properties.ipynb
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -125,21 +125,28 @@
     "d = \"starmodels_inflated\"\n",
     "\n",
     "def process_row(epic):\n",
-    "    fn = \"stlr/{1}/{0}.h5\".format(int(epic), d)\n",
-    "    if not os.path.exists(fn):\n",
-    "        try:\n",
-    "            os.makedirs(\"stlr/\" + d)\n",
-    "        except os.error:\n",
-    "            pass\n",
-    "        check_call(\"wget -O {0} http://www.astro.princeton.edu/~tdm/k2/{2}/{1}.h5\"\n",
-    "                   .format(fn, int(epic), d), shell=True)\n",
+    "    if epic == 201912552:\n",
+    "        mu = np.array([0.394, 0.413])\n",
+    "        cov = np.diag([0.038, 0.043])**2\n",
+    "        te = 3503 + 60 * np.random.randn(1e5)\n",
+    "    else:    \n",
+    "        fn = \"stlr/{1}/{0}.h5\".format(int(epic), d)\n",
+    "        if not os.path.exists(fn):\n",
+    "            try:\n",
+    "                os.makedirs(\"stlr/\" + d)\n",
+    "            except os.error:\n",
+    "                pass\n",
+    "            check_call(\"wget -O {0} http://www.astro.princeton.edu/~tdm/k2/{2}/{1}.h5\"\n",
+    "                       .format(fn, int(epic), d), shell=True)\n",
     "\n",
-    "    # Load the stellar samples and build the Gaussian model.\n",
-    "    star = pd.read_hdf(fn, \"samples\")\n",
-    "    X = np.array(star[[\"radius\", \"mass\"]])\n",
-    "    mu = np.mean(X, axis=0)\n",
-    "    cov = np.cov(X, rowvar=0)\n",
-    "    print(mu, np.sqrt(np.diag(cov)))\n",
+    "        # Load the stellar samples and build the Gaussian model.\n",
+    "        star = pd.read_hdf(fn, \"samples\")\n",
+    "        X = np.array(star[[\"radius\", \"mass\"]])\n",
+    "        mu = np.mean(X, axis=0)\n",
+    "        cov = np.cov(X, rowvar=0)\n",
+    "        print(mu, np.sqrt(np.diag(cov)))\n",
+    "\n",
+    "        te = np.array(star.Teff)\n",
     "    \n",
     "    # KDE shite.\n",
     "    # kde = gaussian_kde(np.array(star[[\"radius\", \"mass\"]]).T)\n",
@@ -153,7 +160,7 @@
     "    #     pl.plot(star.radius, star.mass, \".r\", alpha=0.01)\n",
     "\n",
     "    # Load the samples and convert them to a DataFrame.\n",
-    "    fn = \"../ketu/char/{0}/chain.h5\".format(int(epic))\n",
+    "    fn = \"../ketu/char_old/{0}/chain.h5\".format(int(epic))\n",
     "    with h5py.File(fn, \"r\") as f:\n",
     "        s0 = f[\"chain\"][::5, :, :]\n",
     "    cols = [\"ln_R_star\", \"ln_M_star\", \"q_1\", \"q_2\"]\n",
@@ -167,12 +174,11 @@
     "    samples = pd.DataFrame.from_items(zip(cols, s0.reshape((-1, s0.shape[-1])).T))\n",
     "    \n",
     "    # Supplement the samples with Teff measurements drawn from the stellar properties.\n",
-    "    te = np.array(star.Teff)\n",
     "    inds = np.random.randint(len(te), size=len(samples))\n",
     "    samples[\"teff\"] = te[inds]\n",
     "    \n",
     "    r = (np.exp(np.array(samples[[\"ln_R_star\", \"ln_M_star\"]])) - mu).T\n",
-    "    lnw = -0.5 * np.sum((np.linalg.solve(cov, r) * r) ** 2, axis=0)\n",
+    "    lnw = -0.5 * np.sum(np.linalg.solve(cov, r) * r, axis=0)\n",
     "    \n",
     "    # lnw = np.log(kde(np.exp(np.array(samples[[\"ln_R_star\", \"ln_M_star\"]])).T))\n",
     "    \n",
@@ -231,7 +237,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$201912552$ & $1$ & $32.9412 \\pm {0.0031}$ & $2.29 \\pm {0.24}$ & $83.19 \\pm {9.11}$ & $0.1498 \\pm {0.0053}$ & $273 \\pm {15} $ \\\\\n"
+     ]
+    }
+   ],
+   "source": [
+    "r = process_row(201912552)[0]\n",
+    "print(\"$\" + r.replace(\" & \", \"$ & $\")[:-1] + r\"$ \\\\\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +295,6 @@
       "[ 0.95935628  0.93676184] [ 0.27691722  0.11494432]\n",
       "[ 0.802983    0.83924547] [ 0.19460274  0.084841  ]\n",
       "[ 0.63399513  0.66801258] [ 0.03829108  0.04671421]\n",
-      "[ 0.38277184  0.39730493] [ 0.05066427  0.05907999]\n",
       "[ 0.6840119   0.72567455] [ 0.05584574  0.06609632]\n"
      ]
     }
@@ -280,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 151,
    "metadata": {
     "collapsed": false
    },
@@ -305,9 +330,11 @@
     "\\startdata\n",
     "DATADATA\n",
     "\\enddata\n",
-    "\\tablecomments{blurgh.}\n",
+    "\\tablecomments{These values and uncertainties are given by the mean and\n",
+    "standard deviation of MCMC posterior samplings.}\n",
+    "\\tablenotetext{1}{Parameters inferred from spectroscopic observations.}\n",
     "\\end{deluxetable*}\n",
-    "\"\"\".replace(\"DATADATA\", \"\\n\".join([\"$\" + r.replace(\" & \", \"$ & $\")[:-1] + r\"$ \\\\\" for _ in rows for r in _]))"
+    "\"\"\".replace(\"DATADATA\", \"\\\\\\\\ \\n\".join([\"$\" + r.replace(\" & \", \"$ & $\")[:-1] + r\"$ \" for _ in rows for r in _]))"
    ]
   },
   {
@@ -324,12 +351,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 153,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\\clearpage\n",
+      "%\\LongTables\n",
+      "\\begin{deluxetable*}{lcccccc}\n",
+      "\\tablewidth{0pt}\n",
+      "\\tabletypesize{\\scriptsize}\n",
+      "\\tablecaption{Planet Properties for all Objects of Interest \\label{Tab:Planets}}\n",
+      "\\tablehead{\n",
+      "\\colhead{EPIC} &\n",
+      "\\colhead{Cand. Num.} &\n",
+      "\\colhead{Period (days)} &\n",
+      "\\colhead{Radius ($R_\\oplus$)} &\n",
+      "\\colhead{$a/R_\\star$} &\n",
+      "\\colhead{$a$ (AU)} &\n",
+      "\\colhead{$T_\\mathrm{eq}$ (K)}\n",
+      "}\n",
+      "\\startdata\n",
+      "$201208431$ & $1$ & $10.0041 \\pm {0.0016}$ & $2.33 \\pm {0.23}$ & $27.61 \\pm {0.93}$ & $0.0782 \\pm {0.0016}$ & $563 \\pm {11} $ \\\\ \n",
+      "$201257461$ & $1$ & $50.2519 \\pm {0.0076}$ & $2.25 \\pm {0.17}$ & $79.27 \\pm {4.86}$ & $0.2321 \\pm {0.0057}$ & $383 \\pm {12} $ \\\\ \n",
+      "$201295312$ & $1$ & $5.6561 \\pm {0.0007}$ & $1.97 \\pm {0.24}$ & $13.36 \\pm {1.16}$ & $0.0630 \\pm {0.0015}$ & $1153 \\pm {51} $ \\\\ \n",
+      "$201338508$ & $1$ & $10.9328 \\pm {0.0019}$ & $2.12 \\pm {0.26}$ & $30.63 \\pm {1.54}$ & $0.0808 \\pm {0.0023}$ & $528 \\pm {15} $ \\\\ \n",
+      "$201338508$ & $2$ & $5.7350 \\pm {0.0006}$ & $2.06 \\pm {0.26}$ & $19.92 \\pm {1.00}$ & $0.0526 \\pm {0.0015}$ & $655 \\pm {19} $ \\\\ \n",
+      "$201367065$ & $1$ & $10.0542 \\pm {0.0003}$ & $2.21 \\pm {0.22}$ & $29.98 \\pm {1.48}$ & $0.0752 \\pm {0.0019}$ & $509 \\pm {13} $ \\\\ \n",
+      "$201367065$ & $2$ & $24.6465 \\pm {0.0013}$ & $1.62 \\pm {0.14}$ & $54.50 \\pm {2.70}$ & $0.1367 \\pm {0.0034}$ & $378 \\pm {10} $ \\\\ \n",
+      "$201384232$ & $1$ & $30.9374 \\pm {0.0042}$ & $2.69 \\pm {0.31}$ & $43.85 \\pm {3.79}$ & $0.1916 \\pm {0.0048}$ & $618 \\pm {28} $ \\\\ \n",
+      "$201393098$ & $1$ & $28.6812 \\pm {0.0125}$ & $2.36 \\pm {0.35}$ & $42.84 \\pm {3.07}$ & $0.1814 \\pm {0.0040}$ & $616 \\pm {23} $ \\\\ \n",
+      "$201403446$ & $1$ & $19.1533 \\pm {0.0053}$ & $1.98 \\pm {0.34}$ & $27.28 \\pm {3.22}$ & $0.1459 \\pm {0.0048}$ & $863 \\pm {50} $ \\\\ \n",
+      "$201445392$ & $1$ & $10.3526 \\pm {0.0011}$ & $2.78 \\pm {0.54}$ & $26.07 \\pm {1.34}$ & $0.0842 \\pm {0.0023}$ & $667 \\pm {18} $ \\\\ \n",
+      "$201445392$ & $2$ & $5.0644 \\pm {0.0007}$ & $2.15 \\pm {0.30}$ & $16.18 \\pm {0.83}$ & $0.0523 \\pm {0.0014}$ & $847 \\pm {23} $ \\\\ \n",
+      "$201465501$ & $1$ & $18.4486 \\pm {0.0014}$ & $2.16 \\pm {0.79}$ & $63.79 \\pm {9.87}$ & $0.0941 \\pm {0.0083}$ & $309 \\pm {22} $ \\\\ \n",
+      "$201505350$ & $1$ & $11.9070 \\pm {0.0004}$ & $4.53 \\pm {0.66}$ & $25.79 \\pm {3.52}$ & $0.0963 \\pm {0.0028}$ & $758 \\pm {49} $ \\\\ \n",
+      "$201505350$ & $2$ & $7.9193 \\pm {0.0001}$ & $6.52 \\pm {0.95}$ & $19.65 \\pm {2.68}$ & $0.0734 \\pm {0.0021}$ & $868 \\pm {56} $ \\\\ \n",
+      "$201546283$ & $1$ & $6.7713 \\pm {0.0001}$ & $4.19 \\pm {0.38}$ & $18.13 \\pm {1.06}$ & $0.0662 \\pm {0.0017}$ & $879 \\pm {27} $ \\\\ \n",
+      "$201549860$ & $1$ & $5.6082 \\pm {0.0005}$ & $2.11 \\pm {0.33}$ & $17.78 \\pm {0.58}$ & $0.0550 \\pm {0.0011}$ & $752 \\pm {14} $ \\\\ \n",
+      "$201555883$ & $1$ & $5.7966 \\pm {0.0002}$ & $3.77 \\pm {0.42}$ & $19.95 \\pm {1.03}$ & $0.0533 \\pm {0.0015}$ & $698 \\pm {19} $ \\\\ \n",
+      "$201565013$ & $1$ & $8.6381 \\pm {0.0002}$ & $12.18 \\pm {2.80}$ & $28.00 \\pm {2.54}$ & $0.0671 \\pm {0.0031}$ & $533 \\pm {30} $ \\\\ \n",
+      "$201569483$ & $1$ & $5.7969 \\pm {0.0000}$ & $32.76 \\pm {3.81}$ & $16.75 \\pm {0.84}$ & $0.0591 \\pm {0.0014}$ & $884 \\pm {24} $ \\\\ \n",
+      "$201577035$ & $1$ & $19.3062 \\pm {0.0014}$ & $3.75 \\pm {0.63}$ & $33.88 \\pm {4.82}$ & $0.1374 \\pm {0.0035}$ & $679 \\pm {47} $ \\\\ \n",
+      "$201596316$ & $1$ & $39.8436 \\pm {0.0140}$ & $2.25 \\pm {0.33}$ & $60.48 \\pm {4.08}$ & $0.2144 \\pm {0.0071}$ & $478 \\pm {16} $ \\\\ \n",
+      "$201613023$ & $1$ & $8.2819 \\pm {0.0006}$ & $2.04 \\pm {0.24}$ & $18.85 \\pm {1.59}$ & $0.0788 \\pm {0.0020}$ & $929 \\pm {40} $ \\\\ \n",
+      "$201617985$ & $1$ & $7.2821 \\pm {0.0008}$ & $1.79 \\pm {0.52}$ & $26.85 \\pm {2.03}$ & $0.0579 \\pm {0.0021}$ & $503 \\pm {20} $ \\\\ \n",
+      "$201629650$ & $1$ & $40.0491 \\pm {0.0213}$ & $2.10 \\pm {0.32}$ & $58.86 \\pm {4.04}$ & $0.2162 \\pm {0.0059}$ & $514 \\pm {18} $ \\\\ \n",
+      "$201635569$ & $1$ & $8.3681 \\pm {0.0002}$ & $5.37 \\pm {0.83}$ & $28.64 \\pm {2.24}$ & $0.0643 \\pm {0.0024}$ & $508 \\pm {21} $ \\\\ \n",
+      "$201649426$ & $1$ & $27.7705 \\pm {0.0001}$ & $31.01 \\pm {4.42}$ & $56.20 \\pm {3.40}$ & $0.1529 \\pm {0.0048}$ & $444 \\pm {14} $ \\\\ \n",
+      "$201702477$ & $1$ & $40.7368 \\pm {0.0024}$ & $7.74 \\pm {0.76}$ & $55.56 \\pm {3.56}$ & $0.2247 \\pm {0.0049}$ & $528 \\pm {18} $ \\\\ \n",
+      "$201736247$ & $1$ & $11.8104 \\pm {0.0017}$ & $2.85 \\pm {0.34}$ & $27.33 \\pm {1.42}$ & $0.0939 \\pm {0.0023}$ & $693 \\pm {20} $ \\\\ \n",
+      "$201754305$ & $1$ & $19.0722 \\pm {0.0044}$ & $2.21 \\pm {0.47}$ & $41.27 \\pm {1.80}$ & $0.1225 \\pm {0.0031}$ & $520 \\pm {13} $ \\\\ \n",
+      "$201754305$ & $2$ & $7.6205 \\pm {0.0011}$ & $2.03 \\pm {0.32}$ & $22.39 \\pm {0.98}$ & $0.0665 \\pm {0.0017}$ & $706 \\pm {18} $ \\\\ \n",
+      "$201779067$ & $1$ & $27.2429 \\pm {0.0002}$ & $40.38 \\pm {5.43}$ & $29.75 \\pm {2.57}$ & $0.1809 \\pm {0.0043}$ & $781 \\pm {35} $ \\\\ \n",
+      "$201828749$ & $1$ & $33.5098 \\pm {0.0023}$ & $2.77 \\pm {0.86}$ & $52.39 \\pm {12.88}$ & $0.1921 \\pm {0.0065}$ & $542 \\pm {58} $ \\\\ \n",
+      "$201855371$ & $1$ & $17.9715 \\pm {0.0016}$ & $2.19 \\pm {0.20}$ & $39.94 \\pm {1.65}$ & $0.1173 \\pm {0.0029}$ & $480 \\pm {11} $ \\\\ \n",
+      "$201912552$ & $1$ & $32.9412 \\pm {0.0031}$ & $2.29 \\pm {0.24}$ & $83.19 \\pm {9.11}$ & $0.1498 \\pm {0.0053}$ & $273 \\pm {15} $ \\\\ \n",
+      "$201929294$ & $1$ & $5.0084 \\pm {0.0001}$ & $8.77 \\pm {0.70}$ & $16.11 \\pm {0.87}$ & $0.0516 \\pm {0.0015}$ & $844 \\pm {24} $ \n",
+      "\\enddata\n",
+      "\\tablecomments{These values and uncertainties are given by the mean and\n",
+      "standard deviation of MCMC posterior samplings.}\n",
+      "\\tablenotetext{1}{Parameters inferred from spectroscopic observations.}\n",
+      "\\end{deluxetable*}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(txt)"
+   ]
   },
   {
    "cell_type": "code",
