--- a/table_planets.tex
+++ b/table_planets.tex
@@ -1,4 +1,6 @@
+
 \clearpage
+%\LongTables
 \begin{deluxetable*}{lcccccc}
 \tablewidth{0pt}
 \tabletypesize{\scriptsize}
@@ -13,42 +15,44 @@
 \colhead{$T_\mathrm{eq}$ (K)}
 }
 \startdata
-$201208431$ & $1$ & $10.0041 \pm {0.0016}$ & $2.32 \pm {0.20}$ & $27.60 \pm {0.58}$ & $0.0782 \pm {0.0010}$ & $563 \pm {9} $ \\
-$201257461$ & $1$ & $50.2467 \pm {0.0030}$ & $2.21 \pm {0.06}$ & $79.32 \pm {2.84}$ & $0.2321 \pm {0.0043}$ & $380 \pm {6} $ \\
-$201295312$ & $1$ & $5.6561 \pm {0.0007}$ & $1.97 \pm {0.20}$ & $13.27 \pm {0.74}$ & $0.0631 \pm {0.0010}$ & $1155 \pm {35} $ \\
-$201338508$ & $1$ & $10.9330 \pm {0.0019}$ & $2.14 \pm {0.21}$ & $30.63 \pm {0.79}$ & $0.0808 \pm {0.0012}$ & $528 \pm {10} $ \\
-$201338508$ & $2$ & $5.7349 \pm {0.0006}$ & $2.04 \pm {0.23}$ & $19.92 \pm {0.51}$ & $0.0525 \pm {0.0008}$ & $655 \pm {13} $ \\
-$201367065$ & $1$ & $10.0542 \pm {0.0003}$ & $2.22 \pm {0.18}$ & $30.01 \pm {0.79}$ & $0.0751 \pm {0.0010}$ & $509 \pm {9} $ \\
-$201367065$ & $2$ & $24.6464 \pm {0.0013}$ & $1.61 \pm {0.10}$ & $54.57 \pm {1.44}$ & $0.1365 \pm {0.0018}$ & $377 \pm {6} $ \\
-$201384232$ & $1$ & $30.9374 \pm {0.0043}$ & $2.69 \pm {0.22}$ & $43.61 \pm {2.48}$ & $0.1917 \pm {0.0031}$ & $619 \pm {20} $ \\
-$201393098$ & $1$ & $28.6813 \pm {0.0128}$ & $2.34 \pm {0.31}$ & $42.85 \pm {1.91}$ & $0.1813 \pm {0.0026}$ & $615 \pm {15} $ \\
-$201403446$ & $1$ & $19.1533 \pm {0.0052}$ & $1.99 \pm {0.30}$ & $27.26 \pm {1.95}$ & $0.1457 \pm {0.0030}$ & $861 \pm {32} $ \\
-$201445392$ & $1$ & $10.3526 \pm {0.0011}$ & $2.77 \pm {0.45}$ & $26.02 \pm {0.78}$ & $0.0842 \pm {0.0013}$ & $668 \pm {12} $ \\
-$201445392$ & $2$ & $5.0645 \pm {0.0007}$ & $2.14 \pm {0.25}$ & $16.15 \pm {0.48}$ & $0.0523 \pm {0.0008}$ & $847 \pm {15} $ \\
-$201465501$ & $1$ & $18.4487 \pm {0.0013}$ & $2.19 \pm {0.77}$ & $63.86 \pm {4.11}$ & $0.0934 \pm {0.0036}$ & $307 \pm {11} $ \\
-$201505350$ & $1$ & $11.9070 \pm {0.0004}$ & $4.49 \pm {0.47}$ & $25.77 \pm {2.38}$ & $0.0961 \pm {0.0019}$ & $756 \pm {34} $ \\
-$201505350$ & $2$ & $7.9193 \pm {0.0001}$ & $6.44 \pm {0.66}$ & $19.63 \pm {1.82}$ & $0.0733 \pm {0.0014}$ & $866 \pm {39} $ \\
-$201546283$ & $1$ & $6.7713 \pm {0.0001}$ & $4.16 \pm {0.26}$ & $18.14 \pm {0.66}$ & $0.0662 \pm {0.0011}$ & $879 \pm {18} $ \\
-$201549860$ & $1$ & $5.6082 \pm {0.0005}$ & $2.09 \pm {0.25}$ & $17.77 \pm {0.37}$ & $0.0550 \pm {0.0007}$ & $751 \pm {11} $ \\
-$201555883$ & $1$ & $5.7966 \pm {0.0002}$ & $3.74 \pm {0.30}$ & $19.92 \pm {0.52}$ & $0.0533 \pm {0.0008}$ & $698 \pm {11} $ \\
-$201565013$ & $1$ & $8.6381 \pm {0.0002}$ & $12.03 \pm {2.29}$ & $27.94 \pm {1.37}$ & $0.0670 \pm {0.0017}$ & $532 \pm {24} $ \\
-$201569483$ & $1$ & $5.7969 \pm {0.0000}$ & $32.77 \pm {3.38}$ & $16.69 \pm {0.53}$ & $0.0591 \pm {0.0009}$ & $885 \pm {17} $ \\
-$201577035$ & $1$ & $19.3062 \pm {0.0013}$ & $3.72 \pm {0.45}$ & $33.58 \pm {3.17}$ & $0.1374 \pm {0.0024}$ & $680 \pm {33} $ \\
-$201596316$ & $1$ & $39.8429 \pm {0.0146}$ & $2.24 \pm {0.28}$ & $60.49 \pm {2.34}$ & $0.2142 \pm {0.0041}$ & $477 \pm {10} $ \\
-$201613023$ & $1$ & $8.2819 \pm {0.0006}$ & $2.03 \pm {0.19}$ & $18.87 \pm {1.02}$ & $0.0787 \pm {0.0013}$ & $927 \pm {26} $ \\
-$201617985$ & $1$ & $7.2822 \pm {0.0008}$ & $1.77 \pm {0.46}$ & $26.77 \pm {0.97}$ & $0.0579 \pm {0.0010}$ & $503 \pm {11} $ \\
-$201629650$ & $1$ & $40.0492 \pm {0.0217}$ & $2.09 \pm {0.31}$ & $58.89 \pm {2.49}$ & $0.2160 \pm {0.0037}$ & $514 \pm {12} $ \\
-$201635569$ & $1$ & $8.3681 \pm {0.0002}$ & $5.22 \pm {0.57}$ & $28.74 \pm {1.02}$ & $0.0641 \pm {0.0011}$ & $507 \pm {12} $ \\
-$201649426$ & $1$ & $27.7705 \pm {0.0001}$ & $32.70 \pm {3.91}$ & $55.17 \pm {1.88}$ & $0.1544 \pm {0.0027}$ & $448 \pm {9} $ \\
-$201702477$ & $1$ & $40.7369 \pm {0.0024}$ & $7.69 \pm {0.62}$ & $55.65 \pm {2.40}$ & $0.2246 \pm {0.0034}$ & $527 \pm {13} $ \\
-$201736247$ & $1$ & $11.8104 \pm {0.0017}$ & $2.86 \pm {0.29}$ & $27.26 \pm {0.85}$ & $0.0939 \pm {0.0015}$ & $693 \pm {13} $ \\
-$201754305$ & $1$ & $19.0723 \pm {0.0042}$ & $2.24 \pm {0.42}$ & $41.26 \pm {1.04}$ & $0.1226 \pm {0.0018}$ & $520 \pm {9} $ \\
-$201754305$ & $2$ & $7.6206 \pm {0.0010}$ & $2.04 \pm {0.27}$ & $22.38 \pm {0.57}$ & $0.0665 \pm {0.0010}$ & $706 \pm {12} $ \\
-$201779067$ & $1$ & $27.2430 \pm {0.0002}$ & $37.26 \pm {4.45}$ & $31.71 \pm {1.86}$ & $0.1793 \pm {0.0028}$ & $755 \pm {23} $ \\
-$201828749$ & $1$ & $33.5099 \pm {0.0022}$ & $2.72 \pm {0.70}$ & $51.82 \pm {8.17}$ & $0.1918 \pm {0.0043}$ & $539 \pm {40} $ \\
-$201855371$ & $1$ & $17.9716 \pm {0.0017}$ & $2.19 \pm {0.17}$ & $39.81 \pm {1.00}$ & $0.1175 \pm {0.0018}$ & $481 \pm {8} $ \\
-$201912552$ & $1$ & $32.9411 \pm {0.0031}$ & $2.19 \pm {0.19}$ & $83.89 \pm {3.97}$ & $0.1471 \pm {0.0042}$ & $266 \pm {7} $ \\
-$201929294$ & $1$ & $5.0084 \pm {0.0001}$ & $8.71 \pm {0.43}$ & $16.15 \pm {0.51}$ & $0.0515 \pm {0.0009}$ & $843 \pm {16} $ \\
+$201208431$ & $1$ & $10.0041 \pm {0.0016}$ & $2.33 \pm {0.23}$ & $27.61 \pm {0.93}$ & $0.0782 \pm {0.0016}$ & $563 \pm {11} $ \\
+$201257461$ & $1$ & $50.2519 \pm {0.0076}$ & $2.25 \pm {0.17}$ & $79.27 \pm {4.86}$ & $0.2321 \pm {0.0057}$ & $383 \pm {12} $ \\
+$201295312$ & $1$ & $5.6561 \pm {0.0007}$ & $1.97 \pm {0.24}$ & $13.36 \pm {1.16}$ & $0.0630 \pm {0.0015}$ & $1153 \pm {51} $ \\
+$201338508$ & $1$ & $10.9328 \pm {0.0019}$ & $2.12 \pm {0.26}$ & $30.63 \pm {1.54}$ & $0.0808 \pm {0.0023}$ & $528 \pm {15} $ \\
+$201338508$ & $2$ & $5.7350 \pm {0.0006}$ & $2.06 \pm {0.26}$ & $19.92 \pm {1.00}$ & $0.0526 \pm {0.0015}$ & $655 \pm {19} $ \\
+$201367065$ & $1$ & $10.0542 \pm {0.0003}$ & $2.21 \pm {0.22}$ & $29.98 \pm {1.48}$ & $0.0752 \pm {0.0019}$ & $509 \pm {13} $ \\
+$201367065$ & $2$ & $24.6465 \pm {0.0013}$ & $1.62 \pm {0.14}$ & $54.50 \pm {2.70}$ & $0.1367 \pm {0.0034}$ & $378 \pm {10} $ \\
+$201384232$ & $1$ & $30.9374 \pm {0.0042}$ & $2.69 \pm {0.31}$ & $43.85 \pm {3.79}$ & $0.1916 \pm {0.0048}$ & $618 \pm {28} $ \\
+$201393098$ & $1$ & $28.6812 \pm {0.0125}$ & $2.36 \pm {0.35}$ & $42.84 \pm {3.07}$ & $0.1814 \pm {0.0040}$ & $616 \pm {23} $ \\
+$201403446$ & $1$ & $19.1533 \pm {0.0053}$ & $1.98 \pm {0.34}$ & $27.28 \pm {3.22}$ & $0.1459 \pm {0.0048}$ & $863 \pm {50} $ \\
+$201445392$ & $1$ & $10.3526 \pm {0.0011}$ & $2.78 \pm {0.54}$ & $26.07 \pm {1.34}$ & $0.0842 \pm {0.0023}$ & $667 \pm {18} $ \\
+$201445392$ & $2$ & $5.0644 \pm {0.0007}$ & $2.15 \pm {0.30}$ & $16.18 \pm {0.83}$ & $0.0523 \pm {0.0014}$ & $847 \pm {23} $ \\
+$201465501$ & $1$ & $18.4486 \pm {0.0014}$ & $2.16 \pm {0.79}$ & $63.79 \pm {9.87}$ & $0.0941 \pm {0.0083}$ & $309 \pm {22} $ \\
+$201505350$ & $1$ & $11.9070 \pm {0.0004}$ & $4.53 \pm {0.66}$ & $25.79 \pm {3.52}$ & $0.0963 \pm {0.0028}$ & $758 \pm {49} $ \\
+$201505350$ & $2$ & $7.9193 \pm {0.0001}$ & $6.52 \pm {0.95}$ & $19.65 \pm {2.68}$ & $0.0734 \pm {0.0021}$ & $868 \pm {56} $ \\
+$201546283$ & $1$ & $6.7713 \pm {0.0001}$ & $4.19 \pm {0.38}$ & $18.13 \pm {1.06}$ & $0.0662 \pm {0.0017}$ & $879 \pm {27} $ \\
+$201549860$ & $1$ & $5.6082 \pm {0.0005}$ & $2.11 \pm {0.33}$ & $17.78 \pm {0.58}$ & $0.0550 \pm {0.0011}$ & $752 \pm {14} $ \\
+$201555883$ & $1$ & $5.7966 \pm {0.0002}$ & $3.77 \pm {0.42}$ & $19.95 \pm {1.03}$ & $0.0533 \pm {0.0015}$ & $698 \pm {19} $ \\
+$201565013$ & $1$ & $8.6381 \pm {0.0002}$ & $12.18 \pm {2.80}$ & $28.00 \pm {2.54}$ & $0.0671 \pm {0.0031}$ & $533 \pm {30} $ \\
+$201569483$ & $1$ & $5.7969 \pm {0.0000}$ & $32.76 \pm {3.81}$ & $16.75 \pm {0.84}$ & $0.0591 \pm {0.0014}$ & $884 \pm {24} $ \\
+$201577035$ & $1$ & $19.3062 \pm {0.0014}$ & $3.75 \pm {0.63}$ & $33.88 \pm {4.82}$ & $0.1374 \pm {0.0035}$ & $679 \pm {47} $ \\
+$201596316$ & $1$ & $39.8436 \pm {0.0140}$ & $2.25 \pm {0.33}$ & $60.48 \pm {4.08}$ & $0.2144 \pm {0.0071}$ & $478 \pm {16} $ \\
+$201613023$ & $1$ & $8.2819 \pm {0.0006}$ & $2.04 \pm {0.24}$ & $18.85 \pm {1.59}$ & $0.0788 \pm {0.0020}$ & $929 \pm {40} $ \\
+$201617985$ & $1$ & $7.2821 \pm {0.0008}$ & $1.79 \pm {0.52}$ & $26.85 \pm {2.03}$ & $0.0579 \pm {0.0021}$ & $503 \pm {20} $ \\
+$201629650$ & $1$ & $40.0491 \pm {0.0213}$ & $2.10 \pm {0.32}$ & $58.86 \pm {4.04}$ & $0.2162 \pm {0.0059}$ & $514 \pm {18} $ \\
+$201635569$ & $1$ & $8.3681 \pm {0.0002}$ & $5.37 \pm {0.83}$ & $28.64 \pm {2.24}$ & $0.0643 \pm {0.0024}$ & $508 \pm {21} $ \\
+$201649426$ & $1$ & $27.7705 \pm {0.0001}$ & $31.01 \pm {4.42}$ & $56.20 \pm {3.40}$ & $0.1529 \pm {0.0048}$ & $444 \pm {14} $ \\
+$201702477$ & $1$ & $40.7368 \pm {0.0024}$ & $7.74 \pm {0.76}$ & $55.56 \pm {3.56}$ & $0.2247 \pm {0.0049}$ & $528 \pm {18} $ \\
+$201736247$ & $1$ & $11.8104 \pm {0.0017}$ & $2.85 \pm {0.34}$ & $27.33 \pm {1.42}$ & $0.0939 \pm {0.0023}$ & $693 \pm {20} $ \\
+$201754305$ & $1$ & $19.0722 \pm {0.0044}$ & $2.21 \pm {0.47}$ & $41.27 \pm {1.80}$ & $0.1225 \pm {0.0031}$ & $520 \pm {13} $ \\
+$201754305$ & $2$ & $7.6205 \pm {0.0011}$ & $2.03 \pm {0.32}$ & $22.39 \pm {0.98}$ & $0.0665 \pm {0.0017}$ & $706 \pm {18} $ \\
+$201779067$ & $1$ & $27.2429 \pm {0.0002}$ & $40.38 \pm {5.43}$ & $29.75 \pm {2.57}$ & $0.1809 \pm {0.0043}$ & $781 \pm {35} $ \\
+$201828749$ & $1$ & $33.5098 \pm {0.0023}$ & $2.77 \pm {0.86}$ & $52.39 \pm {12.88}$ & $0.1921 \pm {0.0065}$ & $542 \pm {58} $ \\
+$201855371$ & $1$ & $17.9715 \pm {0.0016}$ & $2.19 \pm {0.20}$ & $39.94 \pm {1.65}$ & $0.1173 \pm {0.0029}$ & $480 \pm {11} $ \\
+$201912552$\tablenotemark{1} & $1$ & $32.9412 \pm {0.0031}$ & $2.29 \pm {0.24}$ & $83.19 \pm {9.11}$ & $0.1498 \pm {0.0053}$ & $273 \pm {15} $ \\
+$201929294$ & $1$ & $5.0084 \pm {0.0001}$ & $8.77 \pm {0.70}$ & $16.11 \pm {0.87}$ & $0.0516 \pm {0.0015}$ & $844 \pm {24} $
 \enddata
-\tablecomments{blurgh.}
+\tablecomments{These values and uncertainties are given by the mean and
+standard deviation of MCMC posterior samplings.}
+\tablenotetext{1}{Parameters inferred from spectroscopic observations.}
 \end{deluxetable*}
