--- a/exopapers.bib
+++ b/exopapers.bib
@@ -802,6 +802,26 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{Bowler15a,
+   author = {{Bowler}, B.~P. and {Liu}, M.~C. and {Shkolnik}, E.~L. and {Tamura}, M.
+	},
+    title = "{Planets around Low-mass Stars (PALMS). IV. The Outer Architecture of M Dwarf Planetary Systems}",
+  journal = {\apjs},
+archivePrefix = "arXiv",
+   eprint = {1411.3722},
+ primaryClass = "astro-ph.EP",
+ keywords = {binaries: visual, brown dwarfs, planetary systems, stars: individual: 2MASS J15594729+4403595 GJ 3629 1RXS J034231.8+121622, stars: low-mass},
+     year = 2015,
+    month = jan,
+   volume = 216,
+      eid = {7},
+    pages = {7},
+      doi = {10.1088/0067-0049/216/1/7},
+   adsurl = {http://adsabs.harvard.edu/abs/2015ApJS..216....7B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Boyajian12,
    author = {{Boyajian}, T.~S. and {von Braun}, K. and {van Belle}, G. and
 	{McAlister}, H.~A. and {ten Brummelaar}, T.~A. and {Kane}, S.~R. and
@@ -1633,6 +1653,30 @@ archivePrefix = "arXiv",
    adsurl = {http://adsabs.harvard.edu/abs/2013arXiv1302.6244D},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
+
+@ARTICLE{Dekany13,
+   author = {{Dekany}, R. and {Roberts}, J. and {Burruss}, R. and {Bouchez}, A. and 
+	{Truong}, T. and {Baranec}, C. and {Guiwits}, S. and {Hale}, D. and 
+	{Angione}, J. and {Trinh}, T. and {Zolkower}, J. and {Shelton}, J.~C. and 
+	{Palmer}, D. and {Henning}, J. and {Croner}, E. and {Troy}, M. and 
+	{McKenna}, D. and {Tesch}, J. and {Hildebrandt}, S. and {Milburn}, J.
+	},
+    title = "{PALM-3000: Exoplanet Adaptive Optics for the 5 m Hale Telescope}",
+  journal = {\apj},
+archivePrefix = "arXiv",
+   eprint = {1309.1216},
+ primaryClass = "astro-ph.IM",
+ keywords = {atmospheric effects, instrumentation: adaptive optics, minor planets, asteroids: individual: Ganymede, planets and satellites: detection, techniques: high angular resolution, techniques: imaging spectroscopy},
+     year = 2013,
+    month = oct,
+   volume = 776,
+      eid = {130},
+    pages = {130},
+      doi = {10.1088/0004-637X/776/2/130},
+   adsurl = {http://adsabs.harvard.edu/abs/2013ApJ...776..130D},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @ARTICLE{Deleuil08,
    author = {{Deleuil}, M. and {Deeg}, H.~J. and {Alonso}, R. and {Bouchy}, F. and
@@ -4143,6 +4187,21 @@ archivePrefix = "arXiv",
     pages = {487-494},
       doi = {10.1051/0004-6361/200912172},
    adsurl = {http://adsabs.harvard.edu/abs/2009A%26A...507..487M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{McCaughrean94,
+   author = {{McCaughrean}, M.~J. and {Stauffer}, J.~R.},
+    title = "{High resolution near-infrared imaging of the trapezium: A stellar census}",
+  journal = {\aj},
+ keywords = {B Stars, Infrared Astronomy, Infrared Imagery, Near Infrared Radiation, O Stars, Star Clusters, Stellar Envelopes, Stellar Spectra, Astronomical Photography, Astronomical Photometry, Hubble Space Telescope, Infrared Spectroscopy, Orion Nebula},
+     year = 1994,
+    month = oct,
+   volume = 108,
+    pages = {1382-1397},
+      doi = {10.1086/117160},
+   adsurl = {http://adsabs.harvard.edu/abs/1994AJ....108.1382M},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
